fix: fix scrollbar colour

--- a/styles.css
+++ b/styles.css
@@ -101,7 +101,7 @@
 
 .sidebar-navigation {
 	overflow: scroll;
-	scrollbar-color: #a5d7d2 white;
+	scrollbar-color: #3a1e3e white;
 	scrollbar-width: thin;
 }
 
